--- a/gradle.properties
+++ b/gradle.properties
@@ -9,15 +9,15 @@ fabric.loom.disableMinecraftVerification=true
 
 # Mod Properties
 	mod_version=0.1.0
-	maven_group=net.danygames2014
-	archives_base_name=template
+	maven_group=
+	archives_base_name=maps-and-frames
 
     # Acess Widener
     accesswidener_name=
 
     # Modrinth Publishing
-	modrinth_slug=
-	modrinth_version_name=
+	modrinth_slug=maps-and-frames
+	modrinth_version_name=0.1.0
 
 # Dependencies
 	stapi_version=2.0.0-alpha.5.2
